Make SonaCube happy